# search_engine

./: CMakeLists.txt  README.md
include/: ConverterJSON.h  InvertedIndex.h  search_engine.h
json/: answers.json  config.json  requests.json
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  main.cpp  search_engine.cpp
tests/: CMakeLists.txt  InvertedIndex_test.cpp  search_engine_test.cpp
